SUBDIRS=www.gnome.org

install-data-local:
	$(INSTALL_DATA) $(top_builddir)/scripts/perl/webwrap.pm $(prefix)/scripts/perl/webwrap.pm
	$(INSTALL_DATA) $(top_builddir)/scripts/php/webwrap.phtml $(prefix)/scripts/php/webwrap.phtml
	$(INSTALL_DATA) $(top_builddir)/scripts/newsheadlines.py $(prefix)/scripts/php/newsheadlines.py
