AC_INIT
AM_INIT_AUTOMAKE(gnomeweb-wml, 0.1)

AC_ARG_WITH(http_prefix, [  --with-http-prefix=DISTRIBUTOR  Specify http prefix for local testing, such as http://localhost/~user/gnomesites/])

if test "x$with_http_prefix" != x ; then
	HTTP_PREFIX=$with_http_prefix
else
	HTTP_PREFIX=http:/
fi

AC_SUBST(HTTP_PREFIX)

AC_OUTPUT([
Makefile
www.gnome.org/Makefile
www.gnome.org/about/Makefile
www.gnome.org/account/Makefile
www.gnome.org/admin/Makefile
www.gnome.org/export/Makefile
www.gnome.org/friends/Makefile
www.gnome.org/summit/Makefile
www.gnome.org/bounties/Makefile
www.gnome.org/fonts/Makefile
www.gnome.org/i18n/Makefile
www.gnome.org/img/Makefile
www.gnome.org/img/hdr/Makefile
www.gnome.org/img/logo/Makefile
www.gnome.org/img/mast/Makefile
www.gnome.org/img/flash/Makefile
www.gnome.org/img/24x24/Makefile
www.gnome.org/images/Makefile
www.gnome.org/images/screenshots/Makefile
www.gnome.org/include/Makefile
www.gnome.org/include/languages/Makefile
www.gnome.org/my/Makefile
www.gnome.org/project/Makefile
www.gnome.org/project/admin/Makefile
www.gnome.org/register/Makefile
www.gnome.org/softwaremap/Makefile
www.gnome.org/start/Makefile
www.gnome.org/start/2.0/Makefile
www.gnome.org/start/2.0/screenshots/Makefile
www.gnome.org/start/2.1/Makefile
www.gnome.org/start/2.1/screenshots/Makefile
www.gnome.org/start/2.2/Makefile
www.gnome.org/start/2.2/notes/Makefile
www.gnome.org/start/2.2/figures/Makefile
www.gnome.org/start/2.3/Makefile
www.gnome.org/start/2.3/ui-review/Makefile
www.gnome.org/start/2.3/modules/Makefile
www.gnome.org/start/2.4/Makefile
www.gnome.org/start/2.4/notes/Makefile
www.gnome.org/start/2.4/notes/figures/Makefile
www.gnome.org/start/2.4/notes/images/Makefile
www.gnome.org/start/2.5/Makefile
www.gnome.org/start/2.5/bindings/Makefile
www.gnome.org/start/2.5/ui-review/Makefile
www.gnome.org/start/2.5/modules/Makefile
www.gnome.org/start/2.6/Makefile
www.gnome.org/start/2.6/notes/Makefile
www.gnome.org/start/2.6/notes/figures/Makefile
www.gnome.org/start/2.6/notes/images/Makefile
www.gnome.org/start/2.7/Makefile
www.gnome.org/start/2.7/ui-review/Makefile
www.gnome.org/start/2.7/platform/Makefile
www.gnome.org/start/2.7/desktop/Makefile
www.gnome.org/start/2.7/bindings/Makefile
www.gnome.org/projects/agnubis/Makefile
www.gnome.org/projects/agnubis/images/Makefile
www.gnome.org/projects/agnubis/libs/Makefile
www.gnome.org/projects/Makefile
www.gnome.org/projects/application-framework/Makefile
www.gnome.org/projects/desktop/Makefile
www.gnome.org/projects/devtools/Makefile
www.gnome.org/projects/devtools/images/Makefile
www.gnome.org/projects/dia/Makefile
www.gnome.org/projects/dia/diatut/Makefile
www.gnome.org/projects/dia/diatut/advanced/Makefile
www.gnome.org/projects/dia/diatut/all/Makefile
www.gnome.org/projects/dia/diatut/basics/Makefile
www.gnome.org/projects/dia/diatut/install/Makefile
www.gnome.org/projects/dia/doc/Makefile
www.gnome.org/projects/dia/images/Makefile
www.gnome.org/projects/dia/umltut/Makefile
www.gnome.org/projects/dia/visio/Makefile
www.gnome.org/projects/evolution/Makefile
www.gnome.org/projects/evolution/images/Makefile
www.gnome.org/projects/evolution/images/screenshots/Makefile
www.gnome.org/projects/evolution/images/screenshots/1.4/Makefile
www.gnome.org/projects/evolution/images/screenshots/1.5/Makefile
www.gnome.org/projects/evolution/doc/Makefile
www.gnome.org/projects/evolution/doc/figures/Makefile
www.gnome.org/projects/evolution/doc/stylesheet-images/Makefile
www.gnome.org/projects/evolution/developer-doc/Makefile
www.gnome.org/projects/evolution/developer-doc/libebook/Makefile
www.gnome.org/projects/evolution/developer-doc/libecal/Makefile
www.gnome.org/projects/f-spot/Makefile
www.gnome.org/projects/f-spot/images/Makefile
www.gnome.org/projects/gconf/Makefile
www.gnome.org/projects/gnome/Makefile
www.gnome.org/projects/gnome-core/Makefile
www.gnome.org/projects/gnome-games/Makefile
www.gnome.org/projects/gnome-games/images/Makefile
www.gnome.org/projects/gnome-libs/Makefile
www.gnome.org/projects/gnome-print/Makefile
www.gnome.org/projects/gnome-print/images/Makefile
www.gnome.org/projects/gnome-print/library/Makefile
www.gnome.org/projects/gnome-print/home/Makefile
www.gnome.org/projects/gst/Makefile
www.gnome.org/projects/gst/images/Makefile
www.gnome.org/projects/gst/screenshots/Makefile
www.gnome.org/projects/gst/stuff/Makefile
www.gnome.org/projects/gst/stuff/gst-gu4dec-2003/Makefile
www.gnome.org/projects/gst/release_notes/Makefile
www.gnome.org/projects/guppi/Makefile
www.gnome.org/projects/guppi/images/Makefile
www.gnome.org/projects/gb/Makefile
www.gnome.org/projects/nautilus/Makefile
www.gnome.org/projects/nautilus/images/Makefile
www.gnome.org/projects/gnumeric/Makefile
www.gnome.org/projects/gnumeric/images/Makefile
www.gnome.org/projects/gnumeric/new-pics/Makefile
www.gnome.org/projects/gnumeric/func-tests/Makefile
www.gnome.org/projects/gnumeric/screenshots/Makefile
www.gnome.org/projects/gnumeric/doc/Makefile
www.gnome.org/projects/gnumeric/doc/figures/Makefile
www.gnome.org/projects/gnumeric/doc/stylesheet/Makefile
www.gnome.org/projects/ooo/Makefile
www.gnome.org/projects/ooo/images/Makefile
www.gnome.org/projects/ooo/screenshots/Makefile
www.gnome.org/projects/ORBit2/Makefile
www.gnome.org/projects/ORBit2/python/Makefile
www.gnome.org/projects/ORBit2/python/images/Makefile
www.gnome.org/projects/ORBit2/backup/Makefile
www.gnome.org/projects/ORBit2/images/Makefile
www.gnome.org/projects/ORBit2/orbit-docs/Makefile
www.gnome.org/projects/ORBit2/orbit-docs/orbit/Makefile
www.gnome.org/projects/ORBit2/orbit-docs/orbit/stylesheet-images/Makefile 
www.gnome.org/projects/ORBit2/orbit-faq/Makefile
www.gnome.org/projects/ORBit2/orbit-faq/faq/Makefile
www.gnome.org/projects/ORBit2/orbit-faq/faq/stylesheet-images/Makefile
www.gnome.org/projects/gnome-network/Makefile
www.gnome.org/projects/gnome-network/images/Makefile
www.gnome.org/projects/gnome-network/release_notes/Makefile
www.gnome.org/projects/gnome-network/screenshots/Makefile
www.gnome.org/projects/gnome-network/style/Makefile
www.gnome.org/projects/epiphany/Makefile
www.gnome.org/projects/epiphany/images/Makefile
www.gnome.org/projects/epiphany/development/Makefile
www.gnome.org/projects/epiphany/documentation/Makefile
www.gnome.org/projects/epiphany/documentation/extensions/Makefile
www.gnome.org/projects/epiphany/documentation/extensions/stylesheet/Makefile
www.gnome.org/projects/epiphany/documentation/reference/Makefile
www.gnome.org/projects/epiphany/screenshots/Makefile
www.gnome.org/resources/Makefile
www.gnome.org/resources/calendar/Makefile
www.gnome.org/resources/calendar/roadshow/Makefile
www.gnome.org/resources/calendar/elf/Makefile
www.gnome.org/developerinterviews/Makefile
www.gnome.org/developerinterviews/images/Makefile
www.gnome.org/applist/Makefile
www.gnome.org/learn/Makefile
www.gnome.org/press/Makefile
www.gnome.org/press/releases/Makefile
www.gnome.org/faqs/Makefile
www.gnome.org/contact/Makefile
news.gnome.org/Makefile
scripts/Makefile
scripts/perl/Makefile
scripts/perl/webwrap.pm
scripts/php/Makefile
scripts/php/webwrap.phtml
])
dnl www.gnome.org/projects/gnome-pilot/Makefile
dnl www.gnome.org/projects/gnome-pilot/oldnews/Makefile
dnl www.gnome.org/projects/gnome-pilot/documents/Makefile
dnl www.gnome.org/projects/gnome-pilot/documents/conduits/Makefile
dnl www.gnome.org/projects/mc/Makefile
dnl www.gnome.org/projects/mc/images/Makefile

