AC_INIT
AM_INIT_AUTOMAKE(gnomeweb-wml, 0.1)

AC_ARG_WITH(http_prefix, [  --with-http-prefix=DISTRIBUTOR  Specify http prefix for local testing, such as http://localhost/~user/gnomesites/])

if test "x$with_http_prefix" != x ; then
	HTTP_PREFIX=$with_http_prefix
else
	HTTP_PREFIX=http:/
fi

AC_SUBST(HTTP_PREFIX)

AC_OUTPUT([
Makefile
www.gnome.org/Makefile
www.gnome.org/about/Makefile
www.gnome.org/community/Makefile
www.gnome.org/css/Makefile
www.gnome.org/friends/Makefile
www.gnome.org/fonts/Makefile
www.gnome.org/i18n/Makefile
www.gnome.org/img/Makefile
www.gnome.org/img/hdr/Makefile
www.gnome.org/img/logo/Makefile
www.gnome.org/img/mast/Makefile
www.gnome.org/img/flash/Makefile
www.gnome.org/img/24x24/Makefile
www.gnome.org/images/Makefile
www.gnome.org/images/screenshots/Makefile
www.gnome.org/include/Makefile
www.gnome.org/include/languages/Makefile
www.gnome.org/mobile/Makefile
www.gnome.org/support/Makefile
www.gnome.org/start/Makefile
www.gnome.org/start/2.0/Makefile
www.gnome.org/start/2.0/screenshots/Makefile
www.gnome.org/start/2.1/Makefile
www.gnome.org/start/2.1/screenshots/Makefile
www.gnome.org/start/2.2/Makefile
www.gnome.org/start/2.2/notes/Makefile
www.gnome.org/start/2.2/figures/Makefile
www.gnome.org/start/2.3/Makefile
www.gnome.org/start/2.3/ui-review/Makefile
www.gnome.org/start/2.3/modules/Makefile
www.gnome.org/start/2.4/Makefile
www.gnome.org/start/2.4/large/Makefile
www.gnome.org/start/2.4/small/Makefile
www.gnome.org/start/2.4/notes/Makefile
www.gnome.org/start/2.4/notes/figures/Makefile
www.gnome.org/start/2.4/notes/images/Makefile
www.gnome.org/start/2.5/Makefile
www.gnome.org/start/2.5/bindings/Makefile
www.gnome.org/start/2.5/ui-review/Makefile
www.gnome.org/start/2.5/modules/Makefile
www.gnome.org/start/2.6/Makefile
www.gnome.org/start/2.6/notes/Makefile
www.gnome.org/start/2.6/notes/figures/Makefile
www.gnome.org/start/2.6/notes/images/Makefile
www.gnome.org/start/2.7/Makefile
www.gnome.org/start/2.7/platform/Makefile
www.gnome.org/start/2.7/desktop/Makefile
www.gnome.org/start/2.7/bindings/Makefile
www.gnome.org/start/2.8/Makefile
www.gnome.org/start/2.8/notes/Makefile
www.gnome.org/start/2.8/notes/figures/Makefile
www.gnome.org/start/2.8/notes/images/Makefile
www.gnome.org/start/2.9/Makefile
www.gnome.org/start/2.9/platform/Makefile
www.gnome.org/start/2.9/desktop/Makefile
www.gnome.org/start/2.9/bindings/Makefile
www.gnome.org/start/2.10/Makefile
www.gnome.org/start/2.10/notes/Makefile
www.gnome.org/start/2.11/Makefile
www.gnome.org/start/2.11/platform/Makefile
www.gnome.org/start/2.11/desktop/Makefile
www.gnome.org/start/2.11/bindings/Makefile
www.gnome.org/start/2.12/Makefile
www.gnome.org/start/2.12/press_release/Makefile
www.gnome.org/start/2.12/press_release/docbook/Makefile
www.gnome.org/start/2.14/Makefile
www.gnome.org/start/2.14/press_release/Makefile
www.gnome.org/start/2.14/press_release/docbook/Makefile
www.gnome.org/projects/Makefile
www.gnome.org/projects/agnubis/Makefile
www.gnome.org/projects/agnubis/images/Makefile
www.gnome.org/projects/agnubis/libs/Makefile
www.gnome.org/projects/application-framework/Makefile
www.gnome.org/projects/beagle/Makefile
www.gnome.org/projects/beagle/img/Makefile
www.gnome.org/projects/beagle/img/foo/Makefile
www.gnome.org/projects/chronojump/Makefile
www.gnome.org/projects/chronojump/articles/Makefile
www.gnome.org/projects/chronojump/images/Makefile
www.gnome.org/projects/chronojump/print/Makefile
www.gnome.org/projects/chronojump/slides-en-fr/Makefile
www.gnome.org/projects/chronojump/slides-es-ca/Makefile
www.gnome.org/projects/desktop/Makefile
www.gnome.org/projects/devtools/Makefile
www.gnome.org/projects/devtools/images/Makefile
www.gnome.org/projects/gdm/Makefile
www.gnome.org/projects/gdm/docs/Makefile
www.gnome.org/projects/gdm/docs/2.8/Makefile
www.gnome.org/projects/gdm/docs/2.14/Makefile
www.gnome.org/projects/gdm/docs/2.16/Makefile
www.gnome.org/projects/gdm/docs/2.18/Makefile
www.gnome.org/projects/gdm/docs/2.20/Makefile
www.gnome.org/projects/gdm/images/Makefile
www.gnome.org/projects/dia/Makefile
www.gnome.org/projects/dia/diatut/Makefile
www.gnome.org/projects/dia/diatut/advanced/Makefile
www.gnome.org/projects/dia/diatut/all/Makefile
www.gnome.org/projects/dia/diatut/basics/Makefile
www.gnome.org/projects/dia/diatut/install/Makefile
www.gnome.org/projects/dia/doc/Makefile
www.gnome.org/projects/dia/images/Makefile
www.gnome.org/projects/dia/umltut/Makefile
www.gnome.org/projects/dia/visio/Makefile
www.gnome.org/projects/eog/Makefile
www.gnome.org/projects/eog/images/Makefile
www.gnome.org/projects/evolution/Makefile
www.gnome.org/projects/evolution/release_notes/Makefile
www.gnome.org/projects/evolution/images/Makefile
www.gnome.org/projects/evolution/images/16/Makefile
www.gnome.org/projects/evolution/images/32/Makefile
www.gnome.org/projects/evolution/images/48/Makefile
www.gnome.org/projects/evolution/images/screenshots/Makefile
www.gnome.org/projects/evolution/images/screenshots/1.4/Makefile
www.gnome.org/projects/evolution/images/screenshots/1.5/Makefile
www.gnome.org/projects/evolution/images/screenshots/2.0/Makefile
www.gnome.org/projects/evolution/images/screenshots/2.4/Makefile
www.gnome.org/projects/evolution/images/screenshots/2.12/Makefile
www.gnome.org/projects/evolution/doc/Makefile
www.gnome.org/projects/evolution/doc/figures/Makefile
www.gnome.org/projects/evolution/doc/stylesheet-images/Makefile
www.gnome.org/projects/evolution/developer-doc/Makefile
www.gnome.org/projects/evolution/developer-doc/libebook/Makefile
www.gnome.org/projects/evolution/developer-doc/libedata-book/Makefile
www.gnome.org/projects/evolution/developer-doc/libecal/Makefile
www.gnome.org/projects/evolution/developer-doc/libedata-cal/Makefile
www.gnome.org/projects/evolution/developer-doc/eplugin/Makefile
www.gnome.org/projects/evolution/developer-doc/gal/Makefile
www.gnome.org/projects/evolution/meeting-logs/Makefile
www.gnome.org/projects/fantasdic/Makefile
www.gnome.org/projects/fantasdic/images/Makefile
www.gnome.org/projects/f-spot/Makefile
www.gnome.org/projects/f-spot/images/Makefile
www.gnome.org/projects/garnome/Makefile
www.gnome.org/projects/garnome/files/Makefile
www.gnome.org/projects/garnome/images/Makefile
www.gnome.org/projects/gconf/Makefile
www.gnome.org/projects/gtksourceview/Makefile
www.gnome.org/projects/gtksourceview/images/Makefile
www.gnome.org/projects/gtksourceview/images/screenshots/Makefile
www.gnome.org/projects/gedit/Makefile
www.gnome.org/projects/gedit/images/Makefile
www.gnome.org/projects/gnome/Makefile
www.gnome.org/projects/gnome-core/Makefile
www.gnome.org/projects/gnome-games/Makefile
www.gnome.org/projects/gnome-games/images/Makefile
www.gnome.org/projects/gnome-libs/Makefile
www.gnome.org/projects/gnome-power-manager/Makefile
www.gnome.org/projects/gnome-power-manager/images/Makefile
www.gnome.org/projects/gnome-print/Makefile
www.gnome.org/projects/gnome-print/images/Makefile
www.gnome.org/projects/gnome-print/library/Makefile
www.gnome.org/projects/gnome-print/home/Makefile
www.gnome.org/projects/gst/Makefile
www.gnome.org/projects/gst/images/Makefile
www.gnome.org/projects/gst/stuff/Makefile
www.gnome.org/projects/gst/stuff/gst-gu4dec-2003/Makefile
www.gnome.org/projects/guppi/Makefile
www.gnome.org/projects/guppi/images/Makefile
www.gnome.org/projects/gyrus/Makefile
www.gnome.org/projects/gyrus/images/Makefile
www.gnome.org/projects/gb/Makefile
www.gnome.org/projects/hotssh/Makefile
www.gnome.org/projects/livecd/Makefile
www.gnome.org/projects/nautilus/Makefile
www.gnome.org/projects/nautilus/images/Makefile
www.gnome.org/projects/nautilus-locked-folders/Makefile
www.gnome.org/projects/nautilus-locked-folders/images/Makefile
www.gnome.org/projects/nemiver/Makefile
www.gnome.org/projects/nemiver/images/Makefile
www.gnome.org/projects/gnumeric/Makefile
www.gnome.org/projects/gnumeric/images/Makefile
www.gnome.org/projects/gnumeric/new-pics/Makefile
www.gnome.org/projects/gnumeric/func-tests/Makefile
www.gnome.org/projects/gnumeric/screenshots/Makefile
www.gnome.org/projects/gnumeric/doc/Makefile
www.gnome.org/projects/gnumeric/doc/figures/Makefile
www.gnome.org/projects/gnumeric/doc/figures/icons/Makefile
www.gnome.org/projects/gnumeric/doc/stylesheet/Makefile
www.gnome.org/projects/gnumeric/announcements/Makefile
www.gnome.org/projects/gnumeric/announcements/ancient/Makefile
www.gnome.org/projects/gnumeric/announcements/1.0/Makefile
www.gnome.org/projects/gnumeric/announcements/1.1/Makefile
www.gnome.org/projects/gnumeric/announcements/1.2/Makefile
www.gnome.org/projects/gnumeric/announcements/1.3/Makefile
www.gnome.org/projects/gnumeric/announcements/1.4/Makefile
www.gnome.org/projects/gnumeric/announcements/1.5/Makefile
www.gnome.org/projects/gnumeric/announcements/1.6/Makefile
www.gnome.org/projects/gnumeric/announcements/1.7/Makefile
www.gnome.org/projects/gnumeric/announcements/1.8/Makefile
www.gnome.org/projects/gnumeric/announcements/1.9/Makefile
www.gnome.org/projects/gnumeric/changelogs/Makefile
www.gnome.org/projects/gnumeric/changelogs/ancient/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.0/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.1/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.2/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.3/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.4/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.5/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.6/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.7/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.8/Makefile
www.gnome.org/projects/gnumeric/changelogs/1.9/Makefile
www.gnome.org/projects/gnumeric/style/Makefile
www.gnome.org/projects/libgsf/Makefile
www.gnome.org/projects/netspeed/Makefile
www.gnome.org/projects/netspeed/images/Makefile
www.gnome.org/projects/NetworkManager/Makefile
www.gnome.org/projects/NetworkManager/users/Makefile
www.gnome.org/projects/NetworkManager/images/Makefile
www.gnome.org/projects/NetworkManager/images/banners/Makefile
www.gnome.org/projects/NetworkManager/developers/Makefile
www.gnome.org/projects/NetworkManager/styles/Makefile
www.gnome.org/projects/NetworkManager/admins/Makefile
www.gnome.org/projects/ooo/Makefile
www.gnome.org/projects/ooo/images/Makefile
www.gnome.org/projects/ooo/screenshots/Makefile
www.gnome.org/projects/ORBit2/Makefile
www.gnome.org/projects/ORBit2/python/Makefile
www.gnome.org/projects/ORBit2/python/images/Makefile
www.gnome.org/projects/ORBit2/backup/Makefile
www.gnome.org/projects/ORBit2/images/Makefile
www.gnome.org/projects/ORBit2/orbit-docs/Makefile
www.gnome.org/projects/ORBit2/orbit-docs/orbit/Makefile
www.gnome.org/projects/ORBit2/orbit-docs/orbit/stylesheet-images/Makefile 
www.gnome.org/projects/ORBit2/orbit-faq/Makefile
www.gnome.org/projects/ORBit2/orbit-faq/faq/Makefile
www.gnome.org/projects/ORBit2/orbit-faq/faq/stylesheet-images/Makefile
www.gnome.org/projects/orca/Makefile
www.gnome.org/projects/orca/images/Makefile
www.gnome.org/projects/orca/pydoc/Makefile
www.gnome.org/projects/gnome-network/Makefile
www.gnome.org/projects/gnome-network/images/Makefile
www.gnome.org/projects/gnome-network/release_notes/Makefile
www.gnome.org/projects/gnome-network/screenshots/Makefile
www.gnome.org/projects/gnome-network/style/Makefile
www.gnome.org/projects/epiphany/Makefile
www.gnome.org/projects/epiphany/images/Makefile
www.gnome.org/projects/epiphany/development/Makefile
www.gnome.org/projects/epiphany/documentation/Makefile
www.gnome.org/projects/epiphany/documentation/extensions/Makefile
www.gnome.org/projects/epiphany/documentation/extensions/stylesheet/Makefile
www.gnome.org/projects/epiphany/documentation/reference/Makefile
www.gnome.org/projects/epiphany/screenshots/Makefile
www.gnome.org/projects/evince/Makefile
www.gnome.org/projects/evince/images/Makefile
www.gnome.org/projects/evince/screenshots/Makefile
www.gnome.org/projects/sabayon/Makefile
www.gnome.org/projects/sabayon/images/Makefile
www.gnome.org/projects/seahorse/Makefile
www.gnome.org/projects/seahorse/images/Makefile
www.gnome.org/projects/tomboy/Makefile
www.gnome.org/projects/tomboy/images/Makefile
www.gnome.org/projects/totem/Makefile
www.gnome.org/projects/totem/images/Makefile
www.gnome.org/projects/tracker/Makefile
www.gnome.org/projects/tracker/images/Makefile
www.gnome.org/projects/tracker/js/Makefile
www.gnome.org/projects/rhythmbox/Makefile
www.gnome.org/projects/rhythmbox/screenshots/Makefile
www.gnome.org/projects/gwget/Makefile
www.gnome.org/projects/desktopwiki/Makefile
www.gnome.org/projects/baobab/Makefile
www.gnome.org/projects/straw/Makefile
www.gnome.org/projects/straw/images/Makefile
www.gnome.org/projects/straw/images/shots/Makefile
www.gnome.org/projects/straw/images/thumbs/Makefile
www.gnome.org/projects/outreach/Makefile
www.gnome.org/projects/outreach/women/Makefile
www.gnome.org/projects/outreach/a11y/Makefile
www.gnome.org/projects/outreach/a11y/rules/Makefile
www.gnome.org/projects/outreach/a11y/tasks/Makefile
www.gnome.org/projects/outreach/a11y/tasks/documentation/Makefile
www.gnome.org/projects/outreach/a11y/tasks/evince/Makefile
www.gnome.org/projects/outreach/a11y/tasks/magnification/Makefile
www.gnome.org/projects/outreach/a11y/tasks/testing/Makefile
www.gnome.org/projects/outreach/a11y/tasks/youridea/Makefile
www.gnome.org/projects/outreach/a11y/faq/Makefile
www.gnome.org/projects/hipo/Makefile
www.gnome.org/projects/hipo/images/Makefile
www.gnome.org/projects/brasero/Makefile
www.gnome.org/projects/brasero/images/Makefile
www.gnome.org/projects/gnome-scan/Makefile
www.gnome.org/projects/vinagre/Makefile
www.gnome.org/projects/billreminder/Makefile
www.gnome.org/projects/cheese/Makefile
www.gnome.org/projects/deskbar-applet/Makefile
www.gnome.org/projects/deskbar-applet/images/Makefile
www.gnome.org/projects/sony-ericsson-remotes/Makefile
www.gnome.org/projects/sony-ericsson-remotes/images/Makefile
www.gnome.org/projects/sony-ericsson-remotes/128x160/Makefile
www.gnome.org/projects/sony-ericsson-remotes/176x220/Makefile
www.gnome.org/projects/sony-ericsson-remotes/240x320/Makefile
www.gnome.org/resources/Makefile
www.gnome.org/resources/calendar/Makefile
www.gnome.org/resources/calendar/roadshow/Makefile
www.gnome.org/resources/calendar/elf/Makefile
www.gnome.org/learn/Makefile
www.gnome.org/press/Makefile
www.gnome.org/press/releases/Makefile
www.gnome.org/faqs/Makefile
www.gnome.org/contact/Makefile
www.gnome.org/roadmap/Makefile
www.gnome.org/softwaremap/Makefile
www.gnome.org/tour/Makefile
www.gnome.org/tour/docbook/Makefile
news.gnome.org/Makefile
])
dnl www.gnome.org/projects/gnome-pilot/Makefile
dnl www.gnome.org/projects/gnome-pilot/oldnews/Makefile
dnl www.gnome.org/projects/gnome-pilot/documents/Makefile
dnl www.gnome.org/projects/gnome-pilot/documents/conduits/Makefile
dnl www.gnome.org/projects/mc/Makefile
dnl www.gnome.org/projects/mc/images/Makefile

