AC_INIT
AM_INIT_AUTOMAKE(gnomeweb-wml, 0.1)

AC_ARG_WITH(http_prefix, [  --with-http-prefix=DISTRIBUTOR  Specify http prefix for local testing, such as http://localhost/~user/gnomesites/])

if test "x$with_http_prefix" != x ; then
	HTTP_PREFIX=$with_http_prefix
else
	HTTP_PREFIX=http:/
fi

AC_SUBST(HTTP_PREFIX)

AC_OUTPUT([
Makefile
www.gnome.org/Makefile
www.gnome.org/about/Makefile
www.gnome.org/community/Makefile
www.gnome.org/css/Makefile
www.gnome.org/friends/Makefile
www.gnome.org/friends/amazon/Makefile
www.gnome.org/friends/amazon/ca/Makefile
www.gnome.org/friends/amazon/de/Makefile
www.gnome.org/friends/amazon/images/Makefile
www.gnome.org/friends/amazon/fr/Makefile
www.gnome.org/friends/amazon/jp/Makefile
www.gnome.org/friends/amazon/uk/Makefile
www.gnome.org/friends/banners/Makefile
www.gnome.org/friends/css/Makefile
www.gnome.org/friends/images/Makefile
www.gnome.org/friends/js/Makefile
www.gnome.org/friends/drive/Makefile
www.gnome.org/friends/drive/admin/Makefile
www.gnome.org/fonts/Makefile
www.gnome.org/i18n/Makefile
www.gnome.org/img/Makefile
www.gnome.org/img/hdr/Makefile
www.gnome.org/img/logo/Makefile
www.gnome.org/img/mast/Makefile
www.gnome.org/img/flash/Makefile
www.gnome.org/img/24x24/Makefile
www.gnome.org/images/Makefile
www.gnome.org/images/screenshots/Makefile
www.gnome.org/include/Makefile
www.gnome.org/include/languages/Makefile
www.gnome.org/mobile/Makefile
www.gnome.org/support/Makefile
www.gnome.org/start/Makefile
www.gnome.org/resources/Makefile
www.gnome.org/resources/calendar/Makefile
www.gnome.org/resources/calendar/roadshow/Makefile
www.gnome.org/resources/calendar/elf/Makefile
www.gnome.org/learn/Makefile
www.gnome.org/press/Makefile
www.gnome.org/press/releases/Makefile
www.gnome.org/press/releases/2.12/Makefile
www.gnome.org/press/releases/2.12/docbook/Makefile
www.gnome.org/press/releases/2.14/Makefile
www.gnome.org/press/releases/2.14/docbook/Makefile
www.gnome.org/faqs/Makefile
www.gnome.org/contact/Makefile
www.gnome.org/softwaremap/Makefile
www.gnome.org/tour/Makefile
www.gnome.org/tour/docbook/Makefile
projects.gnome.org/Makefile
projects.gnome.org/css/Makefile
projects.gnome.org/accessibility/Makefile
projects.gnome.org/accessibility/images/Makefile
projects.gnome.org/accessibility/prosimii/Makefile
projects.gnome.org/accessibility/talks/CSUN-02/Makefile
projects.gnome.org/accessibility/talks/GUAD3C/making-apps-accessible/Makefile
projects.gnome.org/accessibility/talks/GUAD3C/keynote/Makefile
projects.gnome.org/accessibility/talks/GUAD3C/Makefile
projects.gnome.org/accessibility/talks/HKAA-2002/Makefile
projects.gnome.org/accessibility/talks/Makefile
projects.gnome.org/accessibility/talks/GUADEC/Makefile
projects.gnome.org/anjuta/Makefile
projects.gnome.org/anjuta/css/Makefile
projects.gnome.org/application-framework/Makefile
projects.gnome.org/beagle/Makefile
projects.gnome.org/beagle/img/Makefile
projects.gnome.org/beagle/img/foo/Makefile
projects.gnome.org/bugsquad/Makefile
projects.gnome.org/bugsquad/statistics/Makefile
projects.gnome.org/bugsquad/statistics/2002/Makefile
projects.gnome.org/bugsquad/statistics/2003and2004/Makefile
projects.gnome.org/bugsquad/statistics/2005/Makefile
projects.gnome.org/bugsquad/statistics/2006/Makefile
projects.gnome.org/chronojump/Makefile
projects.gnome.org/chronojump/articles/Makefile
projects.gnome.org/chronojump/images/Makefile
projects.gnome.org/chronojump/slides-en-fr/Makefile
projects.gnome.org/chronojump/slides-es-ca/Makefile
projects.gnome.org/desktop/Makefile
projects.gnome.org/devtools/Makefile
projects.gnome.org/devtools/images/Makefile
projects.gnome.org/gdm/Makefile
projects.gnome.org/gdm/images/Makefile
projects.gnome.org/dia/Makefile
projects.gnome.org/dia/diatut/Makefile
projects.gnome.org/dia/diatut/advanced/Makefile
projects.gnome.org/dia/diatut/all/Makefile
projects.gnome.org/dia/diatut/basics/Makefile
projects.gnome.org/dia/diatut/install/Makefile
projects.gnome.org/dia/doc/Makefile
projects.gnome.org/dia/images/Makefile
projects.gnome.org/dia/umltut/Makefile
projects.gnome.org/dia/visio/Makefile
projects.gnome.org/eog/Makefile
projects.gnome.org/eog/images/Makefile
projects.gnome.org/evolution/Makefile
projects.gnome.org/evolution/release_notes/Makefile
projects.gnome.org/evolution/images/Makefile
projects.gnome.org/evolution/images/16/Makefile
projects.gnome.org/evolution/images/32/Makefile
projects.gnome.org/evolution/images/48/Makefile
projects.gnome.org/evolution/images/screenshots/Makefile
projects.gnome.org/evolution/images/screenshots/1.4/Makefile
projects.gnome.org/evolution/images/screenshots/1.5/Makefile
projects.gnome.org/evolution/images/screenshots/2.0/Makefile
projects.gnome.org/evolution/images/screenshots/2.4/Makefile
projects.gnome.org/evolution/images/screenshots/2.12/Makefile
projects.gnome.org/evolution/doc/Makefile
projects.gnome.org/evolution/doc/figures/Makefile
projects.gnome.org/evolution/doc/stylesheet-images/Makefile
projects.gnome.org/evolution/doc/shell/Makefile
projects.gnome.org/evolution/developer-doc/Makefile
projects.gnome.org/evolution/developer-doc/eplugin/Makefile
projects.gnome.org/evolution/developer-doc/gal/Makefile
projects.gnome.org/evolution/meeting-logs/Makefile
projects.gnome.org/fantasdic/Makefile
projects.gnome.org/fantasdic/images/Makefile
projects.gnome.org/f-spot/Makefile
projects.gnome.org/f-spot/images/Makefile
projects.gnome.org/garnome/Makefile
projects.gnome.org/garnome/files/Makefile
projects.gnome.org/garnome/images/Makefile
projects.gnome.org/gconf/Makefile
projects.gnome.org/gtksourceview/Makefile
projects.gnome.org/gtksourceview/images/Makefile
projects.gnome.org/gtksourceview/images/screenshots/Makefile
projects.gnome.org/gtksourceviewmm/Makefile
projects.gnome.org/gedit/Makefile
projects.gnome.org/gedit/images/Makefile
projects.gnome.org/gnome/Makefile
projects.gnome.org/gnome-core/Makefile
projects.gnome.org/gnome-games/Makefile
projects.gnome.org/gnome-games/images/Makefile
projects.gnome.org/gnome-libs/Makefile
projects.gnome.org/gnome-power-manager/Makefile
projects.gnome.org/gnome-power-manager/images/Makefile
projects.gnome.org/gnome-color-manager/Makefile
projects.gnome.org/gnome-color-manager/images/Makefile
projects.gnome.org/gnome-print/Makefile
projects.gnome.org/gnome-print/images/Makefile
projects.gnome.org/gnome-print/library/Makefile
projects.gnome.org/gnome-print/home/Makefile
projects.gnome.org/gnomeradio/Makefile
projects.gnome.org/gnomeradio/images/Makefile
projects.gnome.org/gst/Makefile
projects.gnome.org/gst/images/Makefile
projects.gnome.org/gst/stuff/Makefile
projects.gnome.org/gst/stuff/gst-gu4dec-2003/Makefile
projects.gnome.org/guppi/Makefile
projects.gnome.org/guppi/images/Makefile
projects.gnome.org/gyrus/Makefile
projects.gnome.org/gyrus/images/Makefile
projects.gnome.org/gevice/Makefile
projects.gnome.org/gevice/images/Makefile
projects.gnome.org/gb/Makefile
projects.gnome.org/hotssh/Makefile
projects.gnome.org/livecd/Makefile
projects.gnome.org/nautilus/Makefile
projects.gnome.org/nautilus/images/Makefile
projects.gnome.org/nautilus-locked-folders/Makefile
projects.gnome.org/nautilus-locked-folders/images/Makefile
projects.gnome.org/nemiver/Makefile
projects.gnome.org/nemiver/images/Makefile
projects.gnome.org/gnumeric/Makefile
projects.gnome.org/gnumeric/images/Makefile
projects.gnome.org/gnumeric/new-pics/Makefile
projects.gnome.org/gnumeric/func-tests/Makefile
projects.gnome.org/gnumeric/screenshots/Makefile
projects.gnome.org/gnumeric/doc/Makefile
projects.gnome.org/gnumeric/doc/figures/Makefile
projects.gnome.org/gnumeric/doc/figures/icons/Makefile
projects.gnome.org/gnumeric/doc/stylesheet/Makefile
projects.gnome.org/gnumeric/announcements/Makefile
projects.gnome.org/gnumeric/announcements/ancient/Makefile
projects.gnome.org/gnumeric/announcements/1.0/Makefile
projects.gnome.org/gnumeric/announcements/1.1/Makefile
projects.gnome.org/gnumeric/announcements/1.2/Makefile
projects.gnome.org/gnumeric/announcements/1.3/Makefile
projects.gnome.org/gnumeric/announcements/1.4/Makefile
projects.gnome.org/gnumeric/announcements/1.5/Makefile
projects.gnome.org/gnumeric/announcements/1.6/Makefile
projects.gnome.org/gnumeric/announcements/1.7/Makefile
projects.gnome.org/gnumeric/announcements/1.8/Makefile
projects.gnome.org/gnumeric/announcements/1.9/Makefile
projects.gnome.org/gnumeric/changelogs/Makefile
projects.gnome.org/gnumeric/changelogs/ancient/Makefile
projects.gnome.org/gnumeric/changelogs/1.0/Makefile
projects.gnome.org/gnumeric/changelogs/1.1/Makefile
projects.gnome.org/gnumeric/changelogs/1.2/Makefile
projects.gnome.org/gnumeric/changelogs/1.3/Makefile
projects.gnome.org/gnumeric/changelogs/1.4/Makefile
projects.gnome.org/gnumeric/changelogs/1.5/Makefile
projects.gnome.org/gnumeric/changelogs/1.6/Makefile
projects.gnome.org/gnumeric/changelogs/1.7/Makefile
projects.gnome.org/gnumeric/changelogs/1.8/Makefile
projects.gnome.org/gnumeric/changelogs/1.9/Makefile
projects.gnome.org/gnumeric/style/Makefile
projects.gnome.org/libgsf/Makefile
projects.gnome.org/netspeed/Makefile
projects.gnome.org/netspeed/images/Makefile
projects.gnome.org/NetworkManager/Makefile
projects.gnome.org/NetworkManager/users/Makefile
projects.gnome.org/NetworkManager/images/Makefile
projects.gnome.org/NetworkManager/images/banners/Makefile
projects.gnome.org/NetworkManager/developers/Makefile
projects.gnome.org/NetworkManager/styles/Makefile
projects.gnome.org/NetworkManager/admins/Makefile
projects.gnome.org/ooo/Makefile
projects.gnome.org/ooo/images/Makefile
projects.gnome.org/ooo/screenshots/Makefile
projects.gnome.org/ORBit2/Makefile
projects.gnome.org/ORBit2/python/Makefile
projects.gnome.org/ORBit2/python/images/Makefile
projects.gnome.org/ORBit2/backup/Makefile
projects.gnome.org/ORBit2/images/Makefile
projects.gnome.org/ORBit2/orbit-docs/Makefile
projects.gnome.org/ORBit2/orbit-docs/orbit/Makefile
projects.gnome.org/ORBit2/orbit-docs/orbit/stylesheet-images/Makefile 
projects.gnome.org/ORBit2/orbit-faq/Makefile
projects.gnome.org/ORBit2/orbit-faq/faq/Makefile
projects.gnome.org/ORBit2/orbit-faq/faq/stylesheet-images/Makefile
projects.gnome.org/orca/Makefile
projects.gnome.org/orca/images/Makefile
projects.gnome.org/orca/pydoc/Makefile
projects.gnome.org/gnome-network/Makefile
projects.gnome.org/gnome-network/images/Makefile
projects.gnome.org/gnome-network/release_notes/Makefile
projects.gnome.org/gnome-network/screenshots/Makefile
projects.gnome.org/gnome-network/style/Makefile
projects.gnome.org/epiphany/Makefile
projects.gnome.org/epiphany/images/Makefile
projects.gnome.org/epiphany/development/Makefile
projects.gnome.org/epiphany/documentation/Makefile
projects.gnome.org/epiphany/documentation/extensions/Makefile
projects.gnome.org/epiphany/documentation/extensions/stylesheet/Makefile
projects.gnome.org/epiphany/documentation/reference/Makefile
projects.gnome.org/epiphany/screenshots/Makefile
projects.gnome.org/evince/Makefile
projects.gnome.org/evince/images/Makefile
projects.gnome.org/evince/screenshots/Makefile
projects.gnome.org/sabayon/Makefile
projects.gnome.org/sabayon/images/Makefile
projects.gnome.org/seahorse/Makefile
projects.gnome.org/seahorse/images/Makefile
projects.gnome.org/tomboy/Makefile
projects.gnome.org/tomboy/images/Makefile
projects.gnome.org/totem/Makefile
projects.gnome.org/totem/images/Makefile
projects.gnome.org/tracker/Makefile
projects.gnome.org/tracker/images/Makefile
projects.gnome.org/tracker/images/screenshots/Makefile
projects.gnome.org/tracker/scripts/Makefile
projects.gnome.org/tracker/style/Makefile
projects.gnome.org/rhythmbox/Makefile
projects.gnome.org/rhythmbox/images/Makefile
projects.gnome.org/rhythmbox/screenshots/Makefile
projects.gnome.org/gwget/Makefile
projects.gnome.org/desktopwiki/Makefile
projects.gnome.org/baobab/Makefile
projects.gnome.org/straw/Makefile
projects.gnome.org/straw/images/Makefile
projects.gnome.org/straw/images/shots/Makefile
projects.gnome.org/straw/images/thumbs/Makefile
projects.gnome.org/outreach/Makefile
projects.gnome.org/outreach/women/Makefile
projects.gnome.org/outreach/women/css/Makefile
projects.gnome.org/outreach/women/images/Makefile
projects.gnome.org/outreach/women/2006/Makefile
projects.gnome.org/outreach/a11y/Makefile
projects.gnome.org/outreach/a11y/rules/Makefile
projects.gnome.org/outreach/a11y/tasks/Makefile
projects.gnome.org/outreach/a11y/tasks/documentation/Makefile
projects.gnome.org/outreach/a11y/tasks/evince/Makefile
projects.gnome.org/outreach/a11y/tasks/magnification/Makefile
projects.gnome.org/outreach/a11y/tasks/testing/Makefile
projects.gnome.org/outreach/a11y/tasks/youridea/Makefile
projects.gnome.org/outreach/a11y/faq/Makefile
projects.gnome.org/hipo/Makefile
projects.gnome.org/hipo/images/Makefile
projects.gnome.org/brasero/Makefile
projects.gnome.org/brasero/images/Makefile
projects.gnome.org/gnome-scan/Makefile
projects.gnome.org/vinagre/Makefile
projects.gnome.org/billreminder/Makefile
projects.gnome.org/cheese/Makefile
projects.gnome.org/latour/Makefile
projects.gnome.org/deskbar-applet/Makefile
projects.gnome.org/deskbar-applet/images/Makefile
projects.gnome.org/sony-ericsson-remotes/Makefile
projects.gnome.org/sony-ericsson-remotes/images/Makefile
projects.gnome.org/sony-ericsson-remotes/128x160/Makefile
projects.gnome.org/sony-ericsson-remotes/176x220/Makefile
projects.gnome.org/sony-ericsson-remotes/240x320/Makefile
projects.gnome.org/libchamplain/Makefile
projects.gnome.org/diagnome/Makefile
projects.gnome.org/diagnome/images/Makefile
projects.gnome.org/postr/Makefile
projects.gnome.org/postr/images/Makefile
news.gnome.org/Makefile
])


