SUBDIRS = css \
	accessibility		\
	anjuta 			\
	application-framework	\
	beagle 			\
	bugsquad		\
	chronojump		\
	deskbar-applet		\
	desktop			\
	devtools		\
	dia			\
	eog			\
	evolution		\
	fantasdic		\
	f-spot			\
	garnome			\
	gedit			\
	gconf			\
	gdm			\
	gnome-core		\
	gnome-games		\
	gnome-libs		\
	gnomeradio		\
	gnumeric		\
	guppi			\
	gtksourceview		\
	gtksourceviewmm		\
	gyrus			\
	gevice			\
	gb			\
        hotssh                  \
	nautilus		\
	nautilus-locked-folders \
	nemiver			\
	netspeed                \
	NetworkManager		\
	ooo			\
	ORBit2			\
	gnome-power-manager	\
	gnome-color-manager	\
	gnome-print		\
	gst			\
	gnome-network		\
	epiphany		\
	libgsf			\
	evince			\
	sabayon			\
	seahorse		\
	sony-ericsson-remotes	\
	tracker			\
	tomboy			\
	totem			\
	rhythmbox               \
	livecd			\
	gwget			\
	desktopwiki             \
	baobab                  \
	straw			\
	orca                    \
	outreach		\
	hipo			\
	brasero			\
	gnome-scan		\
	vinagre		\
	billreminder		\
	cheese \
	latour			\
	libchamplain	\
	diagnome

urlpath = 

page_SCRIPTS = .htaccess

page_DATA = \
	index.html

include $(top_srcdir)/rules.common
