SUBDIRS = css \
	accessibility		\
	anjuta 			\
	application-framework	\
	beagle 			\
	bugsquad		\
	chronojump		\
	deskbar-applet		\
	desktop			\
	devtools		\
	dia			\
	emerillon		\
	eog			\
	evolution		\
	fantasdic		\
	f-spot			\
	garnome			\
	gedit			\
	gconf			\
	gdm			\
	gnome-core		\
	gnome-games		\
	gnome-libs		\
	gnomeradio		\
	gnumeric		\
	guppi			\
	gtkglext        	\
	gtkimageview		\
	gtksourceview		\
	gtksourceviewmm		\
	gtranslator		\
	gyrus			\
	gevice			\
	gb			\
        hotssh                  \
	nanny			\
	nautilus		\
	nautilus-locked-folders \
	nemiver			\
	netspeed                \
	NetworkManager		\
	ORBit2			\
	gnome-power-manager	\
	gnome-color-manager	\
	gnome-print		\
	gst			\
	gnome-network		\
	epiphany		\
	libgsf			\
	evince			\
	sabayon			\
	seahorse		\
	solang			\
	sony-ericsson-remotes	\
	tracker			\
	tomboy			\
	totem			\
	rhythmbox               \
	livecd			\
	gwget			\
	desktopwiki             \
	baobab                  \
	straw			\
	orca                    \
	outreach		\
	hipo			\
	brasero			\
	gnome-scan		\
	vinagre			\
	billreminder		\
	cheese 			\
	latour			\
	libchamplain		\
	diagnome 		\
	postr 			\
	gnome-blog      	\
        nautilus-python 	\
        nautilus-sound-converter\
	yelp			\
	latexila

urlpath = 

page_SCRIPTS = .htaccess

page_DATA = \
	index.html

include $(top_srcdir)/rules.common
