SUBDIRS = about community images start support projects resources learn i18n press faqs include friends fonts img contact bounties roadmap softwaremap tour

urlpath =

page_SCRIPTS = \
	.htaccess

page_DATA = \
	index.html \
	default.css \
	frontpage.css \
	protest.css \
	null.css \
	WGO-FOOTER.html \
	WGO-HEADER.html \
	robots.txt \
	favicon.ico

include $(top_srcdir)/rules.common
